--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.4.0|^7.0",
         "guzzlehttp/guzzle": "^6.0",
-        "symfony/options-resolver": "~2.7|^3.0"
+        "symfony/options-resolver": "~2.7|^3.0|^4.0"
     },
     "require-dev": {},
     "autoload": {
